--- a/sign_language_recognition1.ipynb
+++ b/sign_language_recognition1.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Paths to your training and testing datasets\n",
+    "# Paths to training and testing datasets\n",
     "train_dir = 'C:\\\\Users\\\\DELL\\\\Desktop\\\\Sign Language Recognition\\\\archive (3)\\\\asl_alphabet_train\\\\asl_alphabet_train'\n",
     "test_dir = 'C:\\\\Users\\\\DELL\\\\Desktop\\\\Sign Language Recognition\\\\archive (3)\\\\asl_alphabet_test\\\\asl_alphabet_test'"
    ]
@@ -58,7 +58,7 @@
    ],
    "source": [
     "\n",
-    "# Create data generators\n",
+    "#data generators\n",
     "train_generator = train_datagen.flow_from_directory(\n",
     "    train_dir,\n",
     "    target_size=(32, 32),\n",
